Сервисные методы из ветки RPC-xhr под WebSockets
Просто порт под новую реализацию:
* Нужен рефакторинг сервисных методов с учетом новой структуры + реализация поточного получение данных с сервисных методов (забыл). Поиск пока также с заглушкой SearchFrm. Ответы следует формировать через json_spirit.
(cherry picked from commit 1e05dcf3c9a3486b948350347f12c8813512e932)

--- a/StrongDC.vcxproj
+++ b/StrongDC.vcxproj
@@ -391,6 +391,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="rpc\Rpc.cpp" />
+    <ClCompile Include="rpc\Services\RpcServiceHub.cpp" />
+    <ClCompile Include="rpc\Services\RpcServices.cpp" />
+    <ClCompile Include="rpc\Services\RpcServiceSearch.cpp" />
     <ClCompile Include="windows\ADLSearchFrame.cpp" />
     <ClCompile Include="windows\ADLSProperties.cpp" />
     <ClCompile Include="windows\AdvancedPage.cpp" />
@@ -472,6 +475,9 @@
   <ItemGroup>
     <ClInclude Include="rpc\Exceptions\JsonRequestException.hpp" />
     <ClInclude Include="rpc\Rpc.hpp" />
+    <ClInclude Include="rpc\Services\RpcServiceHub.h" />
+    <ClInclude Include="rpc\Services\RpcServices.h" />
+    <ClInclude Include="rpc\Services\RpcServiceSearch.h" />
     <ClInclude Include="windows\DumpSenderDlg.h" />
     <ClInclude Include="windows\RangesPage.h" />
     <ClInclude Include="windows\AboutDlg.h" />
